# vedya

./: .env  .env.example  .gitattributes  .gitignore  APIDrawVedya.py  README.md  cylindrical_model.scad  logfile.txt  pyproject.toml  shapes.py  utils.py
apps/www/: bun.lockb  package.json  pnpm-lock.yaml  prettier.config.js  tailwind.config.ts  tsconfig.json
apps/www/app/: globals.css  layout.tsx  page.tsx
cnc-cuts/: 1001.tap  3mm-adaptive.tap  6mm-adaptive.tap
laser-prototypes/vedya-laser-1/slice-body-6/: slice-body-6.stl
laser-prototypes/vedya-laser-1/slice-body-8/: slice-body-8.dxf
lib/: .gitignore  README.md  __main__.py  makefile  output.txt
lib/coord-transform/: __init__.py  __main__.py
lib/coord-transform-for-circle/: __init__.py  __main__.py  cylinder_openscad.py  cylinder_transform.py  requirements.txt  spherical_transform.py
lib/coord-transform/src/: cylinder.py  sphere.py
lib/cylinder-transformation/: __init__.py  __main__.py  spherical_transform.py  transform.py
lib/flow-field-visual/procedural_generation/: Cargo.toml
lib/img-to-stencil/: __main__.py
lib/procedural_generation/: height_map.txt
lib/procedural_generation/src/: main.rs
lib/render-form/src/: render_plot.py
lib/render_form/: __init__.py  requirements.txt
lib/render_form/src/: render_stencil.py
lib/src/render_form/: __init__.py
public/3d-printer-prototypes/print-2/: 3d-vedya-print-0.75;1;8.3mf  README.md
public/lidar-scans/: vedya-prototype-wood.glb
public/low-res-kailash/: low-res-kailash.stl
src/: APIDrawVedya.py  README.md
src/3d-print-prototypes/: 3d-print.f3d  3d-vedya-print-0.75;1;8.stl
src/3d-printer-prototypes/: 3d-print.f3d
src/3d-printer-prototypes/print-1/: README.md
src/3d-printer-prototypes/print-2/: 3d-vedya-print-0.75;1;8.3mf  3d-vedya-print-0.75;1;8.stl  3d-vedya-print-1;1;8.3mf  3d-vedya-print-filament-process.json  3d-vedya-print-with-kailash-0.75;1;8.stl
src/api-vedya-draw/: APIDrawVedya.py  utils.py
src/core/: context.py  types.py
src/core/geometry/: composition.py
src/lib/: README.md  makefile
src/lib/public/: input.txt
src/lidar-scans/: vedya-prototype-wood.blend
src/low-res-kailash/: low-res-kailash.blend  low-res-kailash.stl
src/mid-res-kailash/: mid-res-kailash.blend  mid-res-kailash.stl
src/public/f360-milestone-1/: tile-magnet-hole-radius-0.30mm.stl  tile-magnet-hole-radius-0.34mm.stl  tile-magnet-hole-radius-0.35mm.stl  tile-magnet-hole-radius-mm-test.f3d
src/public/f360-milestone-2/: tile-magnet-fillet-1.25mm.stl  tile-magnet-fillet-1mm.stl  tile-magnet-fillet-test.f3d
src/public/f360-milestone-4/: 5by5-full-with-brace.stl
src/public/f360-milestone-5/: magnet-base-ring-thickness-0.15mm.stl  magnet-base-ring-thickness-0.20mm.stl
src/v1/3d-printer-mods/: bambu-lab-x1c-anti-vibration-feet.stl
src/v1/3d-printer-prototypes/: README.md
src/v1/api-vedya-draw/: APIDrawVedya.manifest  APIDrawVedya.py  README.md  __main__.py  config.py  context.py  shapes.py  types.py  utils.py
(+188 files in other folders)
