[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "vedya-python"
version = "0.1.0"
license = "unlicense"
description = "a snippet of code to run python for fast scripting in vedya" 
authors = ["jeevanpillay <jp@jeevanpillay.com>"]
packages = [ 
  { include = "coord-transform-for-circle", from = "lib" }
]

[tool.poetry.dependencies]
python = ">=3.12"
numpy = "2.1.0"
plotly = "^5.23.0"
solidpython = "^1.1.3"
solidpython2 = "^2.1.0"
opencv-python = "^4.10.0.84"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
poethepoet = "^0.26.1"
pytest-cov = "^5.0.0"
pydoctor = "^24.3.3"
ruff = "^0.4.4"

[tool.poetry.scripts]
coord-transform-for-circle = "coord-transform-for-circle.__main__:main"
img-to-stencil = "img-to-stencil.__main__:main"

# [tool.poe.tasks]
# docs = "pydoctor --make-html lib/coord-transform-for-circle"
# format = "ruff format lib tests"
# lint = "ruff check lib tests"
# test = "pytest -v --cov=coord-transform-for-circle"

[tool.coverage.report]
fail_under = 100
omit = ["__main__.py"]

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff.lint]
extend-select = ["E", "W", "C90", "I", "N", "D", "UP", "ANN", "S", "B", "A", "C4", "ICN", "INP", "PIE", "PT", "Q", "RET", "SIM", "TCH", "ARG", "ERA", "PL", "PERF"]
ignore = ["D211", "D212"]

[tool.ruff.per-file-ignores]
"tests/*" = ["D", "S101"]
